versionassist/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: version-assist
spec:
  selector:
    matchLabels:
      app: version-assist
  replicas: 1
  template:
    metadata:
      labels:
        app: version-assist
    spec:
      containers:
        - name: version-assist
          image: adsummethraju/versionassist:3.0
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
spec:
  selector:
    matchLabels:
      app: mongodb
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
